# EVM_in_Openenclave

./: CMakeLists.txt  README.md  helloworld.edl
enclave/: CMakeLists.txt  Greeting.cpp  Greeting.h  SumTest.cpp  SumTest.h  enc.c  util.h  wrapper.c  wrapper.h
enclave/eEVM/: account.h  bigint.h  disassembler.cpp  processor.cpp  rlp.h  stack.cpp  stack.h  trace.h  transaction.cpp  transaction.h  util.cpp  util.h
enclave/eEVM/intx/include/intx/: intx.hpp
enclave/eEVM/intx/lib/intx/: div.hpp
enclave/eEVM/simple/: simpleaccount.cpp  simpleaccount.h  simpleglobalstate.cpp  simpleglobalstate.h  simplestorage.cpp  simplestorage.h
host/: CMakeLists.txt
